# agents

./: .gitignore  CONTEXT.md  Cargo.toml  README.md
.cargo/: config.toml
ante-preview/.github/ante/: install-ante.sh.j2
ante-preview/crates/agent-sdk/: Cargo.toml
ante-preview/crates/agent-sdk/examples/: claude_code.rs
ante-preview/crates/agent-sdk/src/: lib.rs
ante-preview/crates/exec/: Cargo.toml
ante-preview/crates/exec/src/: buffer.rs  handle.rs  lib.rs  pool.rs  process_group.rs  receiver.rs  subprocess.rs  tests.rs
ante-preview/crates/protocol-shape/: Cargo.toml
ante-preview/crates/protocol-shape/src/: id.rs  lib.rs
ante-preview/docs-site/docs/antix/: quickstart.md
ante-preview/docs-site/docs/antix/concepts/: endpoints.md  organizations.md  routing.md
ante-preview/docs-site/docs/extend/: mcp.mdx  skills.mdx  subagents.mdx
ante-preview/docs-site/docs/usage/: gateway.mdx
co-scientist/: CONTEXT.md  Cargo.toml  IMPROVEMENT_PLAN.md  README.md  RUN_UNTIL_PAPER_PLAN.md  SKILL.md
co-scientist-tui/: Cargo.toml
co-scientist-tui/src/: agent_task.rs  app.rs  ipc.rs  main.rs  markdown.rs  marker_scrubber.rs  profile.rs  splash.rs  supervisor_session.rs  theme.rs  ui.rs
co-scientist-tui/src/app/: mod.rs  reducers.rs
co-scientist/prompts/: evolution_combine.md  experiment_design.md  experiment_evaluate.md  experiment_execute.md  generation_debate.md  generation_literature.md  metareview_system.md  ranking_pairwise.md  reflection_on_result.md  reflection_review.md
co-scientist/reports/: 2026-07-01-harness-readiness-report.md
co-scientist/src/: agents.rs  bus.rs  claude_cli.rs  db.rs  embed.py  experiment.rs  hypothesis.rs  lib.rs  main.rs  marker_normalizer.rs  policies.rs  prompt_allowlist.rs  prompts.rs  queue.rs  registry.rs  research_session.rs  run_agent.rs  runner.rs  skill.rs  skill_loader.rs  supervisor.rs  supervisor_bundle.rs  tool.rs  tool_catalog.rs  worker.rs
co-scientist/src/agent_loop/: mod.rs  run_agent.rs  runner.rs
co-scientist/src/lifecycle/: bus.rs  mod.rs  policies.rs  promotion.rs  supervisor.rs  supervisor_bundle.rs
co-scientist/src/llm_io/: embeddings.rs  llm_query.rs  mod.rs  prompts.rs
co-scientist/src/marker/: allowlist.rs  mod.rs  normalizer.rs  skill.rs
co-scientist/src/memory/: agents.rs  behavior.rs  context.rs  db.rs  events.rs  helpers.rs  mod.rs  semantic.rs  types.rs
co-scientist/src/research/: experiment.rs  mod.rs
co-scientist/src/tools/: curation.rs  experiment.rs  memory.rs  mod.rs  registry.rs  research.rs
co-scientist/src/tournament/: elo.rs  hypothesis.rs  matches.rs  mod.rs
co-scientist/tests/: integration.rs
co-scientist/tests/memory_soak/: fixture.rs  mod.rs  probes.rs  telemetry.rs  workload.rs
docs/superpowers/plans/: 2026-07-01-harness-readiness-co-scientist.md
docs/superpowers/specs/: 2026-07-01-harness-readiness-co-scientist-design.md
reports/: MiMo-Code-memory-system.md  claude-mem-memory-system.md  continuous-learning-v2-memory-report.md  investigation-ai-agent-os.md  investigation-claude-self-learning-loop.md  investigation-claudelicious.md  memory-production-systems-survey.md  ponytail-architecture.md
