# Super-workspace: combines Ante (AI agent runtime) and co-scientist
# (local memory layer).
#
# `cargo build` from this directory builds the default-members (the Ante
# crates and co-scientist).
#
# Notes:
# - [workspace.package] edition is intentionally omitted because the Ante
#   crates use edition 2024 (needs rustc >= 1.85) while co-scientist uses
#   2024 too — but other downstream members historically used 2021. Each
#   crate declares its own edition.
# - rust-version in [workspace.package] is omitted for the same reason
#   (some historical members had a 1.73 floor).

[workspace]
resolver = "2"
members = [
    # ---- Ante (AI agent runtime) ----
    "ante-preview/crates/agent-sdk",
    "ante-preview/crates/exec",
    "ante-preview/crates/protocol-shape",

    # ---- Co-scientist (local memory layer, no ante fork) ----
    "co-scientist",
]

# What `cargo build` (no args) actually builds. Kept small to keep the
# default fast and to avoid pulling in crates that need extra system deps.
default-members = [
    "ante-preview/crates/agent-sdk",
    "ante-preview/crates/exec",
    "ante-preview/crates/protocol-shape",
    "co-scientist",
]

[workspace.package]
version = "0.7.0-pre.10"
authors = ["the Ante authors"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/local/agents-superworkspace"

[workspace.dependencies]
# Ante local members (used in case future code does `agent_sdk = { workspace = true }`).
ante-exec = { path = "ante-preview/crates/exec", version = "0.1.0" }
ante-protocol-shape = { path = "ante-preview/crates/protocol-shape", version = "0.1.0" }
ante-agent-sdk = { path = "ante-preview/crates/agent-sdk", version = "0.1.0" }

# Third-party deps (kept identical to Turso's prior workspace.dependencies).
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
serde = "1.0"
serde_json = "1.0"
anyhow = "1.0.98"
mimalloc = { version = "0.1.47", default-features = false }
rusqlite = { version = "0.37.0", features = ["bundled"] }
itertools = "0.14.0"
rand = "0.9.2"
rand_chacha = "0.9.0"
tracing = "0.1.41"
schemars = "1.0.4"
garde = "0.22"
parking_lot = "0.12.4"
tokio = { version = "1.0", default-features = false }
tracing-subscriber = "0.3.20"
futures = "0.3"
clap = "4.5.47"
thiserror = "2.0.16"
tempfile = "3.20.0"
indexmap = "2.11.1"
indicatif = "0.17"
miette = "7.6.0"
bitflags = "2.9.4"
fallible-iterator = "0.3.0"
allocator-api2 = "0.4"
criterion = "0.5.0"
codspeed-criterion-compat = "4.2.1"
divan = { package = "codspeed-divan-compat", version = "4.2.1" }
chrono = { version = "0.4.42", default-features = false }
hex = "0.4"
antithesis_sdk = { version = "0.2", default-features = false }
cfg-if = "1.0.0"
tracing-appender = "0.2.3"
env_logger = { version = "0.11.6", default-features = false }
regex = "1.11.1"
regex-syntax = { version = "0.8.5", default-features = false }
similar = { version = "2.7.0" }
similar-asserts = { version = "1.7.0" }
bitmaps = { version = "3.2.1", default-features = false }
console-subscriber = { version = "0.4.1" }
either = { version = "1.15" }
loom = { version = "0.7" }
shuttle = { version = "0.8.1" }

[profile.release]
debug = "line-tables-only"
codegen-units = 4
panic = "abort"
lto = "thin"
strip = "symbols"

[profile.release-official]
inherits = "release"
codegen-units = 1
lto = true

[profile.lib-release]
inherits = "release"
debug = false
codegen-units = 16
lto = false

[profile.fuzzing]
inherits = "dev"
opt-level = 3
debug = "line-tables-only"
panic = "abort"

[profile.antithesis]
inherits = "release"
debug = true
codegen-units = 1
panic = "abort"
lto = true

[profile.bench-profile]
inherits = "release"
debug = true
lto = false
codegen-units = 16

[profile.dist]
inherits = "release-official"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)', 'cfg(shuttle)', 'cfg(antithesis)', 'cfg(nightly)'] }
unstable_name_collisions = "allow"

[workspace.lints.clippy]
or_fun_call = "deny"
clear_with_drain = "deny"
collection_is_never_read = "deny"
naive_bytecount = "deny"
stable_sort_primitive = "deny"
large_stack_frames = "deny"
large_types_passed_by_value = "deny"
redundant_clone = "deny"
assigning_clones = "deny"
