[package]
name = "ante-exec"
version = "0.1.0"
edition = "2024"
description = "Standalone process execution utilities for Ante"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["process", "sync", "time", "rt", "macros", "io-util", "fs"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
pretty_assertions = "1"
tempfile = "3"
